archive/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/default-backend: web
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: web
      port:
        number: 80
  rules:
    - host: sematic.127.0.0.1.nip.io
      http:
        paths:
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /semantic-cache(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sematic-cache
                port:
                  number: 8080
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /semantic-cache(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sematic-cache
                port:
                  number: 8080
